[gd_scene load_steps=12 format=3 uid="uid://cvkgrcljhxs0s"]

[ext_resource type="Script" path="res://scenes/ui/mainMenu/mainMenu.gd" id="1_a7jkm"]
[ext_resource type="Theme" uid="uid://dwimkpe573wse" path="res://assets/materialsThemes/menu.tres" id="1_j2jlu"]
[ext_resource type="Texture2D" uid="uid://chpbdqlig4aax" path="res://assets/images/menu/title.png" id="2_djqdx"]
[ext_resource type="AudioStream" uid="uid://bih47sqls24lg" path="res://assets/sfx/bip.wav" id="5_6ipnm"]
[ext_resource type="PackedScene" uid="uid://baajq84gj2rpv" path="res://scenes/ui/mainMenu/leftMenuButton.tscn" id="5_i2wgw"]
[ext_resource type="AudioStream" uid="uid://cu2s6t4wdb4so" path="res://assets/music/MainMenu.mp3" id="5_j6p0o"]
[ext_resource type="AudioStream" uid="uid://dlr22vboknoka" path="res://assets/sfx/bip2.wav" id="6_5qh5h"]

[sub_resource type="Animation" id="Animation_i1ijx"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("H/1/Title:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(158, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_xj1g1"]
resource_name = "hide"
length = 0.9
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("H/1/Title:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(158, -0.25, 0, 0.25, 0, 250, -0.25, 0, 0.25, 0, -600, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.366667, 0.9)
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("H/1/Play")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hideSelf"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("H/1/Settings")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hideSelf"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("H/1/Quit")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hideSelf"
}]
}

[sub_resource type="Animation" id="Animation_rjk8p"]
resource_name = "show"
length = 0.9
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("H/1/Title:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-600, -0.25, 0, 0.25, 0, 250, -0.25, 0, 0.25, 0, 158, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.366667, 0.9)
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("H/1/Play")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"showSelf"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("H/1/Settings")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"showSelf"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("H/1/Quit")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"showSelf"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yrqgl"]
_data = {
"RESET": SubResource("Animation_i1ijx"),
"hide": SubResource("Animation_xj1g1"),
"show": SubResource("Animation_rjk8p")
}

[node name="MainMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_j2jlu")
script = ExtResource("1_a7jkm")

[node name="H" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="1" type="VBoxContainer" parent="H"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.2
theme_override_constants/separation = 16

[node name="Title" type="TextureRect" parent="H/1"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_djqdx")
stretch_mode = 4

[node name="Control" type="Control" parent="H/1"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Play" parent="H/1" node_paths=PackedStringArray("bip") instance=ExtResource("5_i2wgw")]
layout_mode = 2
bip = NodePath("../Bip")

[node name="Settings" parent="H/1" node_paths=PackedStringArray("bip") instance=ExtResource("5_i2wgw")]
layout_mode = 2
text = "SETTINGS"
bip = NodePath("../Bip")

[node name="Quit" parent="H/1" node_paths=PackedStringArray("bip") instance=ExtResource("5_i2wgw")]
layout_mode = 2
text = "QUIT"
bip = NodePath("../Bip")

[node name="Bip" type="AudioStreamPlayer" parent="H/1"]
stream = ExtResource("5_6ipnm")
volume_db = -6.0
max_polyphony = 16

[node name="Bip2" type="AudioStreamPlayer" parent="H/1"]
stream = ExtResource("6_5qh5h")
volume_db = -6.0
max_polyphony = 4
bus = &"Menu SFX"

[node name="2" type="VBoxContainer" parent="H"]
layout_mode = 2
size_flags_horizontal = 3

[node name="3" type="VBoxContainer" parent="H"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_j6p0o")
autoplay = true
bus = &"Music"
parameters/looping = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yrqgl")
}

[connection signal="pressed" from="H/1/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="H/1/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="H/1/Quit" to="." method="_on_quit_pressed"]
